--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "assets": "./assets"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.7",
     "@types/react": "^16.8.1",
     "@types/react-dom": "^16.0.11",
     "autoprefixer": "^9.4.7",
@@ -28,14 +29,15 @@
     "node-sass": "^4.11.0",
     "parcel-bundler": "^1.11.0",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
-    "parcel-plugin-svg-sprite": "^1.1.0",
+    "parcel-plugin-svg-sprite": "^1.1.1",
     "postcss-modules": "^1.4.1",
-    "prettier": "^1.16.3",
+    "prettier": "^1.16.4",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.3.1"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1"
   }
