--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "rm -rf ./dist && parcel build src/index.html",
+    "build": "rm -rf ./docs && parcel build src/index.html -d ./docs",
     "lint": "tslint -c tslint.json 'src/**/*.ts?(x)'",
     "check-format": "prettier --list-different 'src/**/*.ts?(x)'"
   },
