--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "classnames": "^2.2.6",
     "react": "^16.8.0-alpha.1",
     "react-dom": "^16.8.0-alpha.1",
+    "react-localdata": "^0.1.0",
     "sento-transition": "^0.1.3"
   }
 }
